mmc-core 4.2
--------------


mmc-core 4.1
--------------

* [FEATURE] New history view that captures all operations
* [FEATURE] Pulse update module widget is now a standalone widget
* [FEATURE] Create and run custom quick actions
* [BUGFIX] Fix authentication to GLPI for user provisioning

mmc-core 3.1.1
--------------

 * Feature #2170: Create defaultUserGroup when starting
 * Bug #2115: Mixup between client.async and client.sync cookies
 * Bug #2155: Change user password for root doesn't work
 * Bug #2156: Removed deprecated functions
 * Bug #2186: Users with "no password expiration" policy still have an expiration
              date on the samba side
 * Bug #2256: Allow to change SAMBA password when pwdReset is set
 * Bug #2257: Port to jQuery

mmc-core 3.1.0
--------------

 * New dashboard plugin
 * New services plugin (systemd integration)
 * Bug #1912: Fix MMC login page on IE9
 * Bug #1915: Fix UID between users and computers accounts

mmc-core 3.0.5
--------------

 * Bug #1708: Fix unhandled exception when user atttempt to create a already
   existing user home directory
 * Bug #1775: UID/GID should not be shown when adding a user
 * Bug #1777: Slashes in error messages on the login page

mmc-core 3.0.4
--------------

 * Feature #1687: Allow users to reset their password with a token based
   authentication
 * Password policies enhancements: Password complexity hints, show on the user
   edit page if the password if expired or if the user is in grace login mode
 * New MMC contrib scripts : mmc-check-expired-passwords / usertoken-example in
   /usr/share/doc/python-mmc-base/contrib/scripts
 * Audit : audit logs can be sent to syslog servers
 * Bug #1558: Broken user / group lists under IE7
 * Bug #1691: Bad mmc-agent PID file handling
 * Bug #1706: Previous - Next listing behavior
 * Bug #1739: pulse2-package-server-register-imaging on python 2.7
 * Feature #1594: Use localized languages labels on MMC login page